--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.7.0",
     "postcss": "^8.4.18",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.2.1"
   }
 }
