--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "react-scripts": "5.0.1",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.1.1",
+    "wagmi": "^0.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,9 +47,19 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.7.0",
-    "postcss": "^8.4.18",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.2.1"
+    "buffer": "^6.0.3",
+    "eslint": "^8.30.0",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4",
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   }
 }
