--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.3",
     "@headlessui/react": "^1.7.3",
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.13",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.6.0",
     "react-owl-carousel": "^2.3.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
@@ -46,20 +49,20 @@
     ]
   },
   "devDependencies": {
+    "assert": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "buffer": "^6.0.3",
-    "eslint": "^8.30.0",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
-    "tailwindcss": "^3.2.4",
-    "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
+    "eslint": "^8.30.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "tailwindcss": "^3.2.4",
     "url": "^0.11.0"
   }
 }
