--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@thirdweb-dev/storage": "^1.0.6",
     "ethers": "^5.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
