--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@thirdweb-dev/storage": "^1.0.6",
+    "antd": "^5.1.2",
     "ethers": "^5.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.7.1",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
