--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@thirdweb-dev/storage": "^1.0.6",
     "antd": "^5.1.2",
     "ethers": "^5.7.2",
+    "moment": "^2.29.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.7.1",
+    "react-lottie": "^1.2.3",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
