--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.3",
+    "@ethersproject/constants": "^5.7.0",
     "@headlessui/react": "^1.7.3",
     "@headlessui/tailwindcss": "^0.1.1",
     "@heroicons/react": "^2.0.13",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@thirdweb-dev/storage": "^1.0.6",
     "antd": "^5.1.2",
+    "axios": "^1.2.5",
     "ethers": "^5.7.2",
     "moment": "^2.29.4",
     "react": "^17.0.1",
